[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/ball.png" type="Texture" id=1]
[ext_resource path="res://Ball/ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CircleShape2D" id=6]
radius = 24.0

[node name="ball" type="RigidBody2D"]
collision_mask = 3
mass = 10.0
gravity_scale = 15.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="two_times_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="two_times_checker"]
shape = SubResource( 6 )

[node name="three_times_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="three_times_checker"]
shape = SubResource( 6 )

[node name="delete_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="delete_checker"]
shape = SubResource( 6 )

[connection signal="body_entered" from="two_times_checker" to="." method="_on_two_times_checker_body_entered"]
[connection signal="body_entered" from="three_times_checker" to="." method="_on_three_times_checker_body_entered"]
[connection signal="body_entered" from="delete_checker" to="." method="_on_delete_checker_body_entered"]
